@@ -1357,20 +1357,16 @@ hotshot_logreader(PyObject *unused, PyObject *args)
             self->logfp = fopen(filename, "rb");
             if (self->logfp == NULL) {
                 PyErr_SetFromErrnoWithFilename(PyExc_IOError, filename);
-                Py_DECREF(self);
-                self = NULL;
-                goto finally;
+                goto error;
             }
             self->info = PyDict_New();
-            if (self->info == NULL) {
-                Py_DECREF(self);
-                goto finally;
-            }
+            if (self->info == NULL)
+                goto error;
             /* read initial info */
             for (;;) {
                 if ((c = fgetc(self->logfp)) == EOF) {
                     eof_error(self);
-                    break;
+                    goto error;
                 }
                 if (c != WHAT_ADD_INFO) {
                     ungetc(c, self->logfp);
@@ -1383,13 +1379,15 @@ hotshot_logreader(PyObject *unused, PyObject *args)
                     else
                         PyErr_SetString(PyExc_RuntimeError,
                                         "unexpected error");
-                    break;
+                    goto error;
                 }
             }
         }
     }
- finally:
     return (PyObject *) self;
+  error:
+    Py_DECREF(self);
+    return NULL;
 }
 
 
